Add specs for courses& fix errors
