# app/models/course.rb
@@ -3,6 +3,6 @@
 class Course < ApplicationRecord
   belongs_to :author
 
-  validates :title, presence: true, uniqueness: true, length: { maximum: 255 }
+  validates :title, presence: true, uniqueness: { scope: :author_id }, length: { maximum: 255 }
   validates :author, presence: true
 end
