# swagger/v1/swagger.yaml
@@ -109,11 +109,13 @@ paths:
       - name: page
         in: query
         required: false
+        default: 1
         schema:
           type: integer
       - name: per_page
         in: query
         required: false
+        default: 25
         schema:
           type: integer
       responses:
@@ -403,6 +405,385 @@ paths:
                 - payload
         '404':
           description: New courses author not found
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: error
+                    message: Record not found
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                required:
+                - status
+                - message
+  "/courses":
+    post:
+      summary: Creates a course
+      tags:
+      - Courses
+      parameters: []
+      responses:
+        '201':
+          description: Course created
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: success
+                    message:
+                    payload:
+                      course:
+                        id: 1
+                        title: Test course
+                        author_id: 1
+                        created_at: '2024-10-11T00:00:00.000Z'
+                        updated_at: '2024-10-11T00:00:00.000Z'
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                    nullable: true
+                  payload:
+                    type: object
+                    properties:
+                      course:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          title:
+                            type: string
+                          author_id:
+                            type: integer
+                          created_at:
+                            type: date_time
+                          updated_at:
+                            type: date_time
+                required:
+                - status
+                - message
+                - payload
+        '422':
+          description: Invalid request
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: error
+                    message: Title can't be blank
+                    payload: {}
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                  payload:
+                    type: object
+                required:
+                - status
+                - message
+                - payload
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                author_id:
+                  type: integer
+              required:
+              - title
+              - author_id
+        required: true
+    get:
+      summary: Lists all courses
+      tags:
+      - Courses
+      parameters:
+      - name: page
+        in: query
+        required: false
+        default: 1
+        schema:
+          type: integer
+      - name: per_page
+        in: query
+        required: false
+        default: 25
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Returns list of courses with pagination
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                  - id: 1
+                    title: Test course
+                    author_id: 1
+                    created_at: '2024-10-11T00:00:00.000Z'
+                    updated_at: '2024-10-11T00:00:00.000Z'
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    id:
+                      type: integer
+                    title:
+                      type: string
+                    author_id:
+                      type: integer
+                    created_at:
+                      type: date_time
+                    updated_at:
+                      type: date_time
+  "/courses/{id}":
+    get:
+      summary: Retrieves a course
+      tags:
+      - Courses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Course found
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    id: 1
+                    title: Test course
+                    author_id: 1
+                    created_at: '2024-10-11T00:00:00.000Z'
+                    updated_at: '2024-10-11T00:00:00.000Z'
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: integer
+                  title:
+                    type: string
+                  author_id:
+                    type: integer
+                  created_at:
+                    type: date_time
+                  updated_at:
+                    type: date_time
+                required:
+                - id
+                - title
+                - author_id
+                - created_at
+                - updated_at
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: error
+                    message: Record not found
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                required:
+                - status
+                - message
+    put:
+      summary: Updates a course
+      tags:
+      - Courses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Course updated
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: success
+                    message:
+                    payload:
+                      course:
+                        id: 1
+                        title: Test course
+                        author_id: 1
+                        created_at: '2024-10-11T00:00:00.000Z'
+                        updated_at: '2024-10-11T00:00:00.000Z'
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                    nullable: true
+                  payload:
+                    type: object
+                    properties:
+                      course:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          title:
+                            type: string
+                          author_id:
+                            type: integer
+                          created_at:
+                            type: date_time
+                          updated_at:
+                            type: date_time
+                required:
+                - status
+                - message
+                - payload
+        '422':
+          description: Invalid request
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: error
+                    message: Title can't be blank
+                    payload: {}
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                  payload:
+                    type: object
+                required:
+                - status
+                - message
+                - payload
+        '404':
+          description: Course not found
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: error
+                    message: Record not found
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                required:
+                - status
+                - message
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                title:
+                  type: string
+                  nullable: true
+                author_id:
+                  type: integer
+                  nullable: true
+        required: true
+    delete:
+      summary: Deletes a course and reassigns his courses to other course
+      tags:
+      - Courses
+      parameters:
+      - name: id
+        in: path
+        required: true
+        schema:
+          type: integer
+      responses:
+        '200':
+          description: Course deleted
+          content:
+            application/json:
+              examples:
+                example:
+                  value:
+                    status: success
+                    message:
+                    payload:
+                      course:
+                        id: 1
+                        title: Test course
+                        author_id: 1
+                        created_at: '2024-10-11T00:00:00.000Z'
+                        updated_at: '2024-10-11T00:00:00.000Z'
+              schema:
+                type: object
+                properties:
+                  status:
+                    type: string
+                  message:
+                    type: string
+                    nullable: true
+                  payload:
+                    type: object
+                    properties:
+                      course:
+                        type: object
+                        properties:
+                          id:
+                            type: integer
+                          title:
+                            type: string
+                          author_id:
+                            type: integer
+                          created_at:
+                            type: date_time
+                          updated_at:
+                            type: date_time
+                required:
+                - status
+                - message
+                - payload
+        '404':
+          description: Course not found
           content:
             application/json:
               examples:
